node-provisioning/k8s/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"

spec:
  rules:
    - http:
        paths:
          - path: /rpc
            pathType: Prefix
            backend:
              service:
                name: master-service
                port:
                  name: rpc
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: master-service
                port:
                  name: websocket
          - path: /discovery
            pathType: Prefix
            backend:
              service:
                name: master-service
                port:
                  name: discovery
